--- a/config/database.yml
+++ b/config/database.yml
@@ -84,4 +84,5 @@ production:
   <<: *default
   database: tasksmanager_production
   username: tasksmanager
+  host: localhost
   password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
