--- a/config/database.yml
+++ b/config/database.yml
@@ -85,4 +85,4 @@ production:
   database: tasksmanager_production
   username: tasksmanager
   host: localhost
-  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  password: <%= ENV.fetch("MYAPP_DATABASE_PASSWORD") %>
